--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "test": "test/spec"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "node_modules/.bin/eslint lintertest.js || true"
+    "test": "mocha test/spec/test.js",
+    "lint": "node_modules/.bin/eslint public || true"
   },
   "repository": {
     "type": "git",
@@ -18,11 +21,14 @@
   },
   "homepage": "https://github.com/Andela-ddiei/Inverted-Index#readme",
   "devDependencies": {
+    "browser-sync": "^2.18.7",
+    "chai": "*",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "mocha": "*"
   }
 }
