--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Andela-ddiei/Inverted-Index#readme",
   "devDependencies": {
     "browser-sync": "^2.18.7",
+    "browserify": "^14.0.0",
     "chai": "*",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
