--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha test/spec/test.js",
-    "lint": "node_modules/.bin/eslint public || true"
+    "lint": "node_modules/.bin/eslint src/js/ || true"
   },
   "repository": {
     "type": "git",
