--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ script: gulp
 addons:
     code_climate:
         repo_token: 3af55c89246428166253ce9ff72bc4c779b2f73f4e1061db9f48c2ab41821db6
+after_success:
+- npm run coveralls
