--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "istanbul": "^0.4.5",
     "mocha": "^1.13.0",
     "mocha-lcov-reporter": "^1.2.0"
+  },
+  "dependencies": {
+    "express": "^4.14.1"
   }
 }
