--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node node_modules/gulp/bin/gulp",
-    "test": "mocha test/spec/test.js",
+    "test": "mocha test/spec/inverted-index.spec.js",
     "lint": "node_modules/.bin/eslint src/js/ || true",
     "cover": "istanbul cover -x test/spec/test.js node_modules/mocha/bin/_mocha test/spec/test.js",
     "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
