--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test/spec"
   },
   "scripts": {
-    "start": "node node_modules/gulp/bin/gulp ",
+    "start": "bower install && node node_modules/gulp/bin/gulp start",
     "test": "mocha test/spec/inverted-index.spec.js",
     "lint": "node_modules/.bin/eslint src/js/ || true",
     "cover": "istanbul cover -x test/spec/test.js node_modules/mocha/bin/_mocha test/spec/inverted-index.spec.js",
